tests/errors/symbol_not_found.v
extern foo(int) -> int

foo(1)
